--- a/style.css
+++ b/style.css
@@ -69,4 +69,23 @@
     margin-top: 20px;
     font-size: x-large;
     font-weight: 600;
+    animation: shake .2s ;
+}
+
+@keyframes shake{
+    0%{
+        transform: translateX(-2px);
+    }
+    25%{
+        transform: translateX(2px);
+    }
+    50%{
+        transform: translateX(-2px);
+    }
+    75%{
+        transform: translateX(2px);
+    }
+    100%{
+        transform: translateX(-2px);
+    }
 }
